--- a/mgr/praca/nadajnik.tex
+++ b/mgr/praca/nadajnik.tex
@@ -47,7 +47,7 @@ Czas trwania części wzbudzającej jest najkrótsza z możliwych i trwa jeden o
 tak dobrany by odebrany sygnał zawierał w sobie mierzalne przesunięcie fazowe. 
 Rysunek \ref{fig:output_signal} przedstawia sygnał, jaki podawany jest na przetwornik piezoelektryczny.
 
-\begin{figure}[h]
+\begin{figure}[ht]
     \centering
     \includegraphics[width=1.0\textwidth, trim= 27mm 0mm 0mm 0mm,clip]{output_signal}
     \caption{Sygnał podawany na przetwornik piezoelektryczny}
