--- a/mgr/praca/odbiornik.tex
+++ b/mgr/praca/odbiornik.tex
@@ -44,7 +44,8 @@ pozycja w przestrzeni oraz orientacja nadajnika.
 Cała elektronika osadzona została na ramie w kształcie trójkąta zbudowanej z rur PCV  (rysunek \ref{fig:trojkat}). 
 Odległości pomiędzy modułami ultradźwiękowymi są z góry ustalone, co ułatwia dalsze obliczenia.
 
-Warto zaznaczyć, że długość wykorzystanej fali dźwiękowej przy prędkości dźwięku \SI{340}{m/s} wynosi \SI{8.5}{mm}, co przy 
+Warto zaznaczyć, że dla dźwięku poruszającego się z prędkością \SI{340}{m/s} długość wykorzystanej 
+fali dźwiękowej wynosi \SI{8.5}{mm}, co przy 
 pomiarze 40 próbek na jeden okres daje rozdzielczość pomiaru odległości mniejszą niż \SI{0.5}{mm} (dokładnie \SI{0.2125}{mm}).
 Błąd pomiaru jest jednak trudny do oszacowania, ponieważ  zależy on od aktualnej prędkości
 dźwięku, która się zmienia w czasie wraz ze zmianą warunków atmosferycznych.
