--- a/mgr/praca/main.tex
+++ b/mgr/praca/main.tex
@@ -119,6 +119,15 @@ TODO: dodać
 \end{figure}
 }
 
+\newcommand{\rysunekHT}[3] {
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\textwidth]{#1}
+    \caption{#2}
+    #3
+\end{figure}
+}
+
 \newcommand{\rysunekW}[4] {
 \begin{figure}[h]
     \centering
