--- a/mgr/praca/teoria.tex
+++ b/mgr/praca/teoria.tex
@@ -1,12 +1,12 @@
 \chapter{Podstawy teoretyczne}
 \section{Wyznaczanie położenia na podstawie odległości od punktów stałych}
 
-Zadaniem prezentowanego prototypu jest wyznaczenie położenia nadajnika na podstawie jego 
+Zadaniem prezentowanego prototypu jest wyznaczanie położenia nadajnika na podstawie jego 
 odległości od znanych punktów stałych. Niech $\boldsymbol{x}$ będzie szukanym punktem w przestrzeni,
-$\boldsymbol{y_1,y_2,y_3}$ stałymi punktami o znanym położeniu, a $r_1,r_2,r_3$ wyznaczonymi odległościami
+$\boldsymbol{y_1,y_2,y_3}$ stałymi punktami o znanym położeniu, a $r_1,r_2,r_3$ danymi odległościami
 (rysunek \ref{fig:polozenie}).
 
-\rysunekW{polozenie}{Wyznaczenie położenia na podstawie odległości od punktów stałych}{\label{fig:polozenie}}{0.7}
+\rysunekW{polozenie}{Wyznaczanie położenia na podstawie odległości od punktów stałych}{\label{fig:polozenie}}{0.7}
 Wtedy $\boldsymbol{x}$ możemy wyznaczyć za pomocą układu równań:
  \begin{align}
     \nonumber |\boldsymbol{y_1} - \boldsymbol{x}| &= r_1,
@@ -22,10 +22,10 @@ co dla przestrzeni euklidesowej daje:
 
 Zauważmy, że znając odległość $\boldsymbol{x}$ od jednego z punktów stałych, wiemy, że $\boldsymbol{x}$ będzie leżał na
 sferze o promieniu równym danej odległości. Znając dwie odległości, możemy ograniczyć poszukiwania do części wspólnej dwóch sfer,
-czyli na ogół okręgu. Dla znanych trzech odległości dostajemy część wspólną okręgu ze sferą, czyli zwykle dwa możliwe punkty.
-Mimo iż trzy odległości nie są wystarczające do jednoznacznego wyznaczenia $\boldsymbol{x}$, 
+czyli zazwyczaj okręgu. Dla znanych trzech odległości dostajemy część wspólną okręgu ze sferą, czyli na ogół dwa możliwe punkty.
+Mimo iż trzy odległości nie wystarczą do wyznacz $\boldsymbol{x}$, 
 to otrzymane rozwiązania są na ogół od siebie odległe i 
-możemy założyć, że jedno z rozwiązań jest szukanym przez nas punktem.
+możemy założyć, że jedno z rozwiązań to szukany przez nas punktem.
 
 Ponieważ mamy pełną dowolność w doborze punktów stałych $\boldsymbol{y_i}$, dla uproszczenia możemy przyjąć:
 $\boldsymbol{y_1}=(\frac{a}{2},0,0), \boldsymbol{y_2}=(-\frac{a}{2},0,0), \boldsymbol{y_3}=(0,h,0)$. 
@@ -48,16 +48,16 @@ z czego ostatecznie otrzymujemy:
 \section{Wyznaczanie orientacji w przestrzeni}
 
 Oprócz położenia nadajnika w przestrzeni interesuje nas również jego orientacja.
-Standardowo zdefiniuje się ją jako kąty Eulera \cite{bib:katyEulera}: przechylenia, 
+Standardowo definiuje się ją jako kąty Eulera \cite{bib:katyEulera}: przechylenia, 
 pochylenia oraz odchylenia wokół osi związanych z obiektem, jednak na potrzeby niniejszej pracy wygodniej 
 posługiwać się dwoma prostopadłymi wektorami, które jednoznacznie wyznaczają owe kąty. 
-Prezentowany prototyp określa położenie czterech punktów $\boldsymbol{x_1, x_2, x_3, x_4}$ będących wierzchołkami prostokąta 
-znajdującego się na nadajniku, a następnie na ich podstawie wyznacza poszukiwane dwa prostopadłe wektory, które jednoznacznie
-definiują jego orientację (rysunek \ref{fig:orientacja}).
+Prezentowany prototyp określa położenie czterech punktów $\boldsymbol{x_1, x_2, x_3, x_4}$ na nadajniku tworzących prostokąt 
+, a następnie na ich podstawie wyznacza poszukiwane dwa prostopadłe wektory, które jednoznacznie
+definiują orientację nadajnika (rysunek \ref{fig:orientacja}).
  \begin{figure}[H]
     \centering
     \includegraphics[width=0.5\textwidth, trim= 0mm 0mm 0mm 0mm,clip]{orientacja}
-    \caption{Wyznaczanie orientacji na podstawie czterech punktów}
+    \caption{Wyznaczanie orientacji nadajnika na podstawie czterech punktów}
     \label{fig:orientacja}
 \end{figure}
 Na rysunku punkt $\boldsymbol{o} = (\boldsymbol{x_1} + \boldsymbol{x_2} + \boldsymbol{x_3} + \boldsymbol{x_4})/4$ jest szukanym położeniem
@@ -86,18 +86,18 @@ Prędkość dźwięku w powietrzu w dużym stopniu zależy od panujących warunk
 zwłaszcza temperatury.
 Dla gazu doskonałego prędkość ta wyraża się wzorem:
 \[
-V = \num{331,3}  \sqrt{1+\frac{T}{\num{273,15}}} \qquad \left[ \SI{}{\frac{m}{s}} \right]
+V = \num{331,3}  \sqrt{1+\frac{T}{\num{273,15}}} \quad \left[ \SI{}{\frac{m}{s}} \right]
 \]
 
 gdzie $T$ jest temperaturą w stopniach Celsjusza (\SI{}{\degC}).
 Wzór ten możemy przybliżyć za pomocą rozwinięcia Taylora dla temperatur bliskich temperaturze pokojowej \ang{25}\SI{}{C}:
 \[
- V = \num{346,13}  +  \num{0,580}(T - \ang{25})  \qquad \left[ \SI{}{ \frac{m}{s}} \right]
+ V = \num{346,13}  +  \num{0,580}(T - \ang{25})  \quad \left[ \SI{}{ \frac{m}{s}} \right]
 \]
 
 Mimo że współczynnik temperaturowy jest stosunkowo mały i stanowi jedynie 0,17\% całej prędkości,
 to przy odległościach rzędu metrów i rozdzielczościach rzędu milimetrów staje się on istotny, 
-dlatego w przypadku prezentowanego prototypu niezbędna jest kalibracja wstępna, która pozwala
+dlatego w przypadku prezentowanego prototypu niezbędna jest wstępna kalibracja, która pozwala
 wyznaczyć aktualną prędkość dźwięku.
 
 
